--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "vercel-build": "npm install --legacy-peer-deps && next build",
     "lint": "eslint"
   },
   "dependencies": {
@@ -21,7 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^10.0.1",
+    "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.4",
     "tailwindcss": "^4",
     "typescript": "^5"
